Init temp commit
Issues to bring up:
- Change default mods dir from "mods" to "."
- Make 2 types of configs: global (--rc, home dir, vmb dir) and local (mods dir)
- When creating .vmbrc, show where it is created
- ? ~/.vmb-templates/template_folder
- Error: spawn REG ENOENT when trying to look up the registry

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "embedded/**/*"
     ],
     "targets": [
-      "node10-win-x64"
+      "node10-win-x64",
+      "node10-linux-x64"
     ]
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "glob-watcher": "^5.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
+    "is-wsl": "^2.1.0",
     "merge-stream": "^1.0.1",
     "normalize-path": "^3.0.0",
     "opn": "^5.2.0",
